--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" src="js/scripts.js" defer>
+    <script rel="stylesheet" src="js/scripts.js" defer></script>
     <!-- fontAwesome biblioteca de icones pesquisando "fontAwesome cdnjs"-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -18,7 +18,7 @@
             <form id="todo-form">
                 <p>Adicione a sua tarefa: </p>
                 <div class="form-control">
-                    <input type="text" name="" id="todo-input" placeholder="O que você vai fazer?">
+                    <input type="text" name="" id="todo-input" placeholder="O que você vai fazer?" autocomplete="off">
                     <button type="submit">
                         <i class="fa-thin fa-plus"></i>
                     </button>
@@ -78,7 +78,6 @@
                         <i class="fa-solid fa-xmark"></i>
                     </button>
                 </div>
-                
             </div>
         </div>
     </body>
