--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div id="todo-list">
-                <div class="todo done">
+                <div class="todo">
                     <h3>Fazer panquecas</h3>
                     <button class="finish-todo">
                         <i class="fa-solid fa-check"></i>
