--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="js/search.js" defer></script>
     <script src="js/filtrar.js" defer></script>
     <script src="js/testeStorage.js"></script>
+    <script src="js/inicializar.js"></script>
     <!-- fontAwesome biblioteca de icones pesquisando "fontAwesome cdnjs"-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -57,15 +58,15 @@
                 </div>
             </div>
             <div id="todo-list">
-                <div class="todo">
+                <!-- <div class="todo">
                     <h3>Fazer panquecas</h3>
-                    <button class="finish-todo">
+                    <button class="finish-todo" type="button">
                         <i class="fa-solid fa-check"></i>
                     </button>
-                    <button class="edit-todo">
+                    <button class="edit-todo" type="button">
                         <i class="fa-solid fa-pen"></i>
                     </button>
-                    <button class="remove-todo">
+                    <button class="remove-todo" type="button">
                         <i class="fa-solid fa-xmark"></i>
                     </button>
                 </div>
@@ -80,7 +81,7 @@
                     <button class="remove-todo">
                         <i class="fa-solid fa-xmark"></i>
                     </button>
-                </div>
+                </div> -->
             </div>
         </div>
     </body>
