--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="js/search.js" defer></script>
     <script src="js/filtrar.js" defer></script>
     <script src="js/testeStorage.js"></script>
-    <script src="js/inicializar.js"></script>
+    <script src="js/inicializar.js" defer></script>
     <!-- fontAwesome biblioteca de icones pesquisando "fontAwesome cdnjs"-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
